fix(FooterBar): Increase contrast on copyright text

--- a/assets/scss/_blog.scss
+++ b/assets/scss/_blog.scss
@@ -1,13 +1,15 @@
+@import "~bootstrap/scss/functions";
+
 .blog-header {
     line-height: 1;
-    border-bottom: 1px solid #e5e5e5;
+    border-bottom: 1px solid $gray-400;
     margin-left: -15px;
     margin-right: -15px;
   }
 
 .blog-footer {
     line-height: 1;
-    border-top: 1px solid #e5e5e5;
+    border-top: 1px solid $gray-400;
     margin-left: -15px;
     margin-right: -15px;
   }
@@ -115,9 +117,9 @@
    */
   .blog-footer {
     padding: 2.5rem 0;
-    color: #999;
+    color: $gray-700;
     text-align: center;
-    background-color: #f9f9f9;
+    background-color: $gray-100;
     border-top: .05rem solid #e5e5e5;
   }
   .blog-footer p:last-child {
